fixed body overflow

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: sans-serif;
-  /* max-width: 1280px; */
+  overflow-x: hidden;
   background-color: white;
 }
 
